hphp/hack/test/typecheck/modules/internal_keyword2.php.exp
File "internal_keyword2.php", line 5, characters 10-17:
Methods cannot have multiple visibility modifiers (Parsing[1002])
