hphp/hack/test/typecheck/modules/internal_keyword2.php
<?hh
<<file:__EnableUnstableFeatures("modules"), __Module("foo")>>
module foo {}
class Foo {
  public internal function bar(): void {}
}
